--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 .App {
   font-family: Arial, sans-serif;
   max-width: 600px;
-  margin: 0 auto;
+  max-height: 500px;
+  margin: 45px auto;
   padding: 20px;
   background-color: #f9f9f9;
   border: 1px solid #ccc;
   border-radius: 10px;
+  overflow-y: auto; 
 }
 
 h1 {
@@ -23,9 +25,9 @@ form {
   margin-bottom: 15px;
 }
 
-input[type="text"],
-input[type="date"],
-select {
+form input[type="text"],
+form input[type="date"],
+form select {
   width: calc(100% - 20px);
   padding: 8px;
   margin-top: 5px;
@@ -33,12 +35,10 @@ select {
   border-radius: 5px;
 }
 
-input[type="checkbox"],
-input[type="radio"] {
-  margin-right: 10px;
-}
-
 button {
+  display: inline-block; 
+  margin: auto;  
+  width: calc(20%);
   padding: 10px;
   border: none;
   border-radius: 5px;
@@ -48,7 +48,38 @@ button {
   cursor: pointer;
 }
 
+.choose-value-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 button:hover {
   background-color: #45a049;
 }
 
+.calculator-dropdown {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  background-color: white;
+  color: black;
+  cursor: pointer;
+}
+
+.calculator-dropdown:focus {
+  outline: none;
+  border-color: #4caf50;
+}
+
+.result-display {
+  margin: 20px auto;  
+  width: calc(60%);
+  padding: 10px;
+  border: 1px solid #4caf50;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  font-size: 18px;
+  text-align: center;
+}
