--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 .App {
   font-family: Arial, sans-serif;
   max-width: 600px;
-  max-height: 500px;
+  /* max-height: 500px; */
   margin: 45px auto;
   padding: 20px;
   background-color: #f9f9f9;
   border: 1px solid #ccc;
   border-radius: 10px;
-  overflow-y: auto;
+  /* overflow-y: auto; */
 }
 
 h1 {
