--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,7 @@ button {
   align-items: center;
 }
 
-button:hover {
+button:not(:disabled):hover {
   background-color: #45a049;
 }
 
@@ -101,4 +101,15 @@ button:hover {
   background-color: #f9f9f9;
   font-size: 18px;
   text-align: center;
+}
+
+.error {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+.disabled {
+  background-color: #ccc;
+  color: #666;
 }
