--- a/src/index.css
+++ b/src/index.css
@@ -5,16 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background: linear-gradient(to bottom, #00BFFF, #00008B); */
-  /* Градиент от голубого (#00BFFF) к темно-синему (#00008B) */
-  /* background: #00BFFF; */
-  /* background: radial-gradient(circle, white, #00BFFF);  */
-  /* Градиент от темно-синего (#00008B) к голубому (#00BFFF) */
-  background-image: url("../public/background.png"); /* Замените на путь к вашему изображению */
-  /* background-size: cover; 
-  background-position: center; 
-  background-repeat: no-repeat;  */
-  /* background-attachment: fixed;   */
+  background-image: url("../public/background.png");
 }
 
 code {
